Issue #7: @MaxSize Bean Validation constraint added

--- a/src/main/resources/ch/codebulb/crudfaces/ValidationMessages_en.properties
+++ b/src/main/resources/ch/codebulb/crudfaces/ValidationMessages_en.properties
@@ -4,3 +4,4 @@
 # Messages
 # --------
 javax.validation.constraints.NotNull.message=must not be empty
+ch.codebulb.crudfaces.validation.constraints.MaxSize.message=length must be at most {value}
