--- a/src/main/resources/ch/codebulb/crudfaces/Messages.properties
+++ b/src/main/resources/ch/codebulb/crudfaces/Messages.properties
@@ -1,49 +1,5 @@
-### errors
-error.read.notFound=entity with id {0} not found
-error.read.notFound_={1} with id {0} not found
-
-### info
-info.dataTable.empty=No records found.
-
-### actions
-actions=actions
-create=create
-create_=create new {0}
-show=show
-edit=edit
-delete=delete
-save=save
-save.all=save all
-apply=apply
-clear=clear
-reset=reset
-
-# table
-show.selected=show selected
-edit.selected=edit selected
-delete.selected=delete selected
-filters.reset=reset filters
-selection.clear=clear selection
-
-### navigation
-back=back
-next=next
-
-### confirmation
-ok=OK
-cancel=cancel
-yes=yes
-no=no
-
-### boolean
-true=yes
-false=no
-
-### model properties
-id=ID
-name=name
-# person
-firstName=first name
-lastName=last name
-# text
-comment=comment
+## languages
+language.en.original=English
+language.es.original=Espa\u00f1ol
+language.fr.original=Fran\u00e7ais
+language.de.original=Deutsch
